deploy/k8s/base/quickstart/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: quickstart
  namespace: hanko-tenant
spec:
  selector:
    app: hanko-quickstart
  ports:
    - port: 80
      targetPort: http-public
      protocol: TCP
      name: http
